<resources>
    <string name="app_name">Spoofify</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="greeting">Welcome to Spoofify</string>
    <string name="instructions">Lets go ahead and get you logged in...</string>
    <string name="login"><u>Log In</u></string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="note">Please note this application was made for testing only, as requested by Disrupted Labs</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="back">Back</string>
    <string name="get_password_link">Get Password</string>
    <string name="new_password">New Password</string>
    <string name="new_email">New Email</string>
    <string name="update_pass">Update Password</string>
    <string name="logout">Log Out</string>
    <string name="home_greeting">Hi there!</string>
    <!-- Facebook -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="request_statement">Cant seem to find the song youre looking for?<br/><br/>Then go ahead and shoot us a message and well make sure to look into it.</string>
    <string name="Cat1">Most Popular</string>
    <string name="Cat2">Top Soundtrack</string>
    <string name="Cat3">Top Rock and Roll</string>
    <string name="Cat4">Top Country</string>
    <string name="download_notice">Tap on each album to download a short (free!) ringtone</string>
    <string name="settings_greeting">Welcome to your settings, you can change some important things here</string>
    <string name="search_statement">Go ahead and take a look for your favorite songs here</string>
    <string name="search_notice">If you are unable to find a song, then head on over to the request tab and submit a request for us to add it to our ever growing library</string>
    <string name="search_text">Search here</string>
    <string name="request_button">Submit my request</string>
    <string name="send_btn">Click here to search!</string>
</resources>