<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.SettingsFragment">

    <TextView
        android:typeface="serif"
        android:id="@+id/settings_greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/settings_greeting"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/update_pass_btn"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/update_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_greeting" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/update_pass_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>