<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <EditText
                android:id="@+id/email_edt_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email_hint"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <EditText
                android:id="@+id/pass_edt_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password_hint"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:text="@string/login"
            android:background="@color/endColor"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/reset_pass_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot password?"
            android:layout_gravity="center"
            android:clickable="true"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/tvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="OR"
                android:textColor="#000000"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toLeftOf="@id/tvText"
                android:background="#000000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:layout_toRightOf="@id/tvText"
                android:background="#000000" />

        </RelativeLayout>

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:text="@string/signup"
            android:background="@color/startColor"
            android:textColor="@color/black"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/watermark"
        android:layout_width="271dp"
        android:layout_height="71dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@drawable/disrupt_labs_watermark" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/note"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/watermark"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="245dp"
        android:layout_height="33dp"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:text="@string/greeting"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="168dp"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:text="@string/instructions"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1" />

</androidx.constraintlayout.widget.ConstraintLayout>